# roflotestovoe

./: Makefile  README.md  pyproject.toml
src/calculator/: operators.py
src/factorial/: factorial.py
src/infinite_array/: infinite_array.py
src/sortirovka_massiva/: glavnyi.py
