# Poetry

[project]
name = "roflotestovoe"
version = "0.1.0"
description = ""
authors = [
    {name = "NatsionalnoeDostoyanie",email = "sanaflamenbaum@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.14.1"


# ----------------------------------------------------------------------------------------------------------------------


# Code formatting

[tool.autoflake]
ignore_init_module_imports = true  # Ignore unused imports in `__init__.py` files
in_place = true                    # Modify files directly instead of printing changes to the console
recursive = true                   # Recursively check directories
remove_all_unused_imports = true   # Remove all unused imports

[tool.black]
line-length = 120                  # Maximum line length

[tool.isort]
force_grid_wrap = 2                # Disable automatic row wrapping
include_trailing_comma = true      # Add a comma after the last element in parentheses
line_length = 120                  # Maximum line length (recommended for black compatibility)
lines_after_imports = 2            # Number of blank lines to leave after imports
multi_line_output = 3              # Use import format with hyphens in parentheses

# ----------------------------------------------------------------------------------------------------------------------


# Linting

[tool.mypy]
explicit_package_bases = true  # Avoid confusion between local and installed packages
ignore_missing_imports = true  # Ignore missing type annotations for external libraries
mypy_path = "src"              # Path to root directory where mypy will look for modules
strict = true                  # Strict mode for type checking
